crates/ars-components/src/overlay/drawer/snapshots/ars_components__overlay__drawer__tests__drawer_header.snap
---
source: crates/ars-components/src/overlay/drawer/mod.rs
expression: snapshot_attrs(&api.header_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "header",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "drawer",
            ),
        ),
    ],
    styles: [],
}
