crates/ars-components/src/overlay/drawer/snapshots/ars_components__overlay__drawer__tests__drawer_positioner_bottom.snap
---
source: crates/ars-components/src/overlay/drawer/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).positioner_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "positioner",
            ),
        ),
        (
            Data(
                "ars-placement",
            ),
            String(
                "bottom",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "drawer",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "closed",
            ),
        ),
    ],
    styles: [
        (
            Custom(
                "ars-drawer-closed-transform",
            ),
            "translateY(100%)",
        ),
    ],
}
